# kuma-ai-prompt-organizer

./: README.md  plan.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  alembic.ini  init_db.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-sqlite.txt  requirements-updated.txt  requirements.txt  run.py  run_migration.py  setup.cfg  setup.py
backend/.github/workflows/: ci-cd.yml
backend/alembic/: __init__.py  env.py  script.py.mako
backend/alembic/versions/: 0002_add_user_and_likes.py  0003_add_updated_at_to_categories.py
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: ai.py  api.py
backend/app/api/endpoints/: auth.py  categories.py  likes.py  prompts.py  tags.py
backend/app/core/: __init__.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  auth.py  category.py  prompt.py  tag.py
backend/monitoring/grafana/dashboards/: fastapi-dashboard.json
backend/monitoring/grafana/provisioning/dashboards/: dashboard.yml
backend/monitoring/prometheus/: prometheus.yml
backend/monitoring/promtail/: promtail-config.yml
backend/scripts/: add_user.py  check_db_schema.py  create_admin.py  create_user_simple.py  import_prompts.py  migrate_likes.py  test_create_user.py  test_likes.py  update_prompts_user_id.py
backend/tests/: conftest.py  test_api.py
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/components/: AIPromptAssistant.tsx  CategoryForm.tsx  ChakraProvider.tsx  ConfirmationDialog.tsx  Navbar.tsx  PromptForm.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: CategoryDetail.tsx  CategoryEdit.tsx  CategoryList.tsx  CategoryNew.tsx  PromptDetail.tsx  PromptList.tsx
frontend/src/services/: aiService.ts  api.ts  categoryService.ts  promptService.ts
frontend/src/types/: index.ts
prompts/: prompts.json
